Actualizar menu2.html

--- a/menu2.html
+++ b/menu2.html
@@ -151,7 +151,7 @@
        
         <div class="flex justify-between items-end">
           <div>
-            
+            <p class="text-[10px] uppercase tracking-widest opacity-60 mb-1">CREDENCIAL DIGITAL</p>
             <h3 class="text-xl font-bold">Franco Paganini</h3>
             <p class="text-xs opacity-80">CURAID-01-41316202</p>
           </div>
